<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText1Lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_entry_url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:inputType="textUri"
            android:hint="@string/label_entry_url"
            android:nextFocusRight="@+id/editText0">
            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText0Lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_entry_display_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:inputType="textCapSentences"
            android:hint="@string/label_entry_display_name"
            android:nextFocusRight="@+id/editText2"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText2Lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_entry_packet">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="7"
            android:hint="@string/label_entry_packet"
            android:nextFocusRight="@+id/editText3"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText3Lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_entry_count">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="7"
            android:hint="@string/label_entry_count"
            android:nextFocusRight="@+id/editText4"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText4Lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_interval_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="7"
            android:hint="@string/label_interval_time"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>